--- a/app/src/main/res/layout/don_hang_item.xml
+++ b/app/src/main/res/layout/don_hang_item.xml
@@ -21,6 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Mã đơn hàng: 18092003"
+                android:textColor="#3F51B5"
                 android:textStyle="bold"
                 android:textSize="15dp"
                 android:id="@+id/donhang_tvMaDonHang"
@@ -47,6 +48,7 @@
                 android:textSize="15dp"
                 android:textStyle="bold"
                 android:text="Tổng tiền: 1.000.000.000đ"
+                android:textColor="#FF0000"
                 android:id="@+id/donhang_tvTongTien"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
