--- a/app/src/main/res/layout/fragment_don_hang_chi_tiet.xml
+++ b/app/src/main/res/layout/fragment_don_hang_chi_tiet.xml
@@ -116,6 +116,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Tổng Tiền: 1.000.000.000đ"
+                    android:textColor="#FF0000"
                     android:id="@+id/dhct_tvTongTien"
                     android:textSize="15dp"
                     android:textStyle="bold"/>
