kiểm thử ngày 16/4

--- a/app/src/main/res/layout/dialog_dia_chi_nhan_hang.xml
+++ b/app/src/main/res/layout/dialog_dia_chi_nhan_hang.xml
@@ -1,20 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:layout_margin="10dp">
-    <TextView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        android:text="Nhập/Sửa Thông tin nhận hàng"
+        app:cardCornerRadius="5dp"
+        android:backgroundTint="#F2CB05"
         android:layout_margin="10dp"
-        android:gravity="center"
-        android:id="@+id/donhang_tvTitle"/>
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:layout_gravity="center"
+            android:textSize="20dp"
+            android:text="Nhập/Sửa Thông tin nhận hàng"
+            android:padding="10dp"
+            android:textColor="#fff"
+            android:layout_margin="10dp"
+            android:id="@+id/donhang_tvTitle"/>
+    </androidx.cardview.widget.CardView>
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
