--- a/app/src/main/res/layout/don_hang_item.xml
+++ b/app/src/main/res/layout/don_hang_item.xml
@@ -23,6 +23,7 @@
                 android:text="Mã đơn hàng: 18092003"
                 android:textStyle="bold"
                 android:textSize="15dp"
+                android:textColor="#0D47A1"
                 android:id="@+id/donhang_tvMaDonHang"
                 />
             <TextView
@@ -47,6 +48,7 @@
                 android:textSize="15dp"
                 android:textStyle="bold"
                 android:text="Tổng tiền: 1.000.000.000đ"
+                android:textColor="#FF0000"
                 android:id="@+id/donhang_tvTongTien"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
