--- a/app/src/main/res/layout/fragment_chi_tiet_san_pham.xml
+++ b/app/src/main/res/layout/fragment_chi_tiet_san_pham.xml
@@ -36,6 +36,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical"
+                    android:padding="10dp"
                     >
 
                     <TextView
@@ -57,7 +58,7 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                        android:layout_width="200dp"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
                         <com.google.android.material.textfield.TextInputEditText
@@ -67,7 +68,7 @@
                             android:hint="Nhập số lượng" />
                     </com.google.android.material.textfield.TextInputLayout>
                     <LinearLayout
-                        android:layout_width="200dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         >
@@ -75,9 +76,19 @@
                             android:id="@+id/chitiet_btnAdd"
                             android:layout_width="200dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1.3"
+                            android:layout_weight="1"
                             android:backgroundTint="#F2CB05"
                             android:text="Thêm giỏ hàng"
+                            android:layout_marginRight="5dp"
+                            />
+                        <Button
+                            android:id="@+id/chitiet_btnThanhToan"
+                            android:layout_width="200dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:backgroundTint="#F2CB05"
+                            android:text="Thanh toán"
+                            android:layout_marginLeft="5dp"
                             />
                     </LinearLayout>
                 </LinearLayout>
