--- a/app/src/main/res/layout/fragment_don_hang_chi_tiet.xml
+++ b/app/src/main/res/layout/fragment_don_hang_chi_tiet.xml
@@ -67,11 +67,12 @@
                         android:textSize="15dp"
                         android:id="@+id/dhct_tvDiaChi"/>
                 </LinearLayout>
-                <ImageView
-                    android:layout_width="0dp"
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_weight="0.1"
-                    android:src="@drawable/ic_baseline_navigate_next_24_chitietdonhang"
+                    android:text="Cập nhật"
+                    android:textColor="#01579B"
+                    android:textStyle="bold"
                     android:id="@+id/dhct_updateThongTin"/>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
@@ -118,6 +119,7 @@
                     android:text="Tổng Tiền: 1.000.000.000đ"
                     android:id="@+id/dhct_tvTongTien"
                     android:textSize="15dp"
+                    android:textColor="#FF0000"
                     android:textStyle="bold"/>
                 <TextView
                     android:layout_width="wrap_content"
@@ -133,14 +135,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             >
+
             <Button
                 android:id="@+id/dhct_btnUpdate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="10dp"
-                android:backgroundTint="#01579B"
                 android:layout_alignParentBottom="true"
+                android:layout_gravity="center"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:backgroundTint="#01579B"
                 android:text="Cập nhật trạng thái" />
         </RelativeLayout>
     </LinearLayout>
