--- a/app/src/main/res/layout/dialog_tinh_tien.xml
+++ b/app/src/main/res/layout/dialog_tinh_tien.xml
@@ -1,178 +1,166 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="#ffffff"
-    android:layout_height="match_parent">
+    android:orientation="vertical">
 
     <TextView
+        android:id="@+id/mon_tvTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/custom_textview"
+        android:background="#F2CB05"
         android:gravity="center"
         android:padding="12dp"
-        android:text="Tình Tiền  "
+        android:text="Tình Tiền"
         android:textColor="#fff"
-        android:id="@+id/mon_tvTitle"
         android:textSize="20dp"
         android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="20dp"
-
-        >
-
-
-   <androidx.cardview.widget.CardView
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       app:cardElevation="10dp"
-       app:cardCornerRadius="10dp"
-       android:layout_marginLeft="20dp"
-
-       >
-       <TextView
-           android:layout_width="100dp"
-           android:layout_height="wrap_content"
-           android:id="@+id/tenban"
-           android:text="Bàn Số 1 "
-           android:textStyle="bold"
-           android:textSize="20dp"
-           android:background="#8BC34A"
-            android:gravity="center"
-           android:textColor="#B52B2B"
-
-           />
-   </androidx.cardview.widget.CardView>
-
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
+        android:orientation="horizontal">
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardElevation="10dp"
-            app:cardCornerRadius="10dp"
-            android:layout_marginLeft="150dp"
-
             >
-            <TextView
-                android:layout_width="130dp"
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/ngay"
-                android:text="20/03/2023 "
-                android:textStyle="bold"
-                android:textSize="20dp"
-                android:background="#FF9800"
-               android:gravity="center"
-                android:textColor="#B52B2B"
-                />
-        </androidx.cardview.widget.CardView>
-
-
+                android:layout_alignParentLeft="true"
+                android:layout_margin="10dp"
+                app:cardCornerRadius="10dp"
+                >
+                <TextView
+                    android:id="@+id/tenban"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="#FFFFFF"
+                    android:gravity="center"
+                    android:layout_margin="5dp"
+                    android:text="Bàn Số 1 "
+                    android:textColor="#F2CB05"
+                    android:textSize="20dp"
+                    android:textStyle="bold"
+                    />
+            </androidx.cardview.widget.CardView>
+<!--            ngay-->
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_margin="10dp"
+                app:cardCornerRadius="10dp"
+                >
+                <TextView
+                    android:id="@+id/ngay"
+                    android:layout_width="130dp"
+                    android:layout_height="wrap_content"
+                    android:background="#FFFFFF"
+                    android:gravity="center"
+                    android:text="20/03/2023 "
+                    android:layout_margin="5dp"
+                    android:textColor="#F2CB05"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+            </androidx.cardview.widget.CardView>
+        </RelativeLayout>
     </LinearLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="350dp"
-            android:id="@+id/rcv"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            android:orientation="vertical"
-            android:layout_marginBottom="20dp"
-            />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1.5"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
 
     <androidx.cardview.widget.CardView
         android:layout_width="280dp"
-        android:layout_height="180dp"
+        android:layout_height="150dp"
         android:layout_centerHorizontal="true"
-        app:cardElevation="10dp"
-        app:cardCornerRadius="10dp"
-        android:layout_marginTop="10dp"
         android:layout_gravity="center"
-        >
+        app:cardCornerRadius="10dp"
+        android:layout_margin="10dp"
+        app:cardElevation="10dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
             android:layout_centerHorizontal="true"
             android:background="#F2CB05"
-            >
-         <TextView
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:text="Tổng Tiên"
-             android:textSize="20dp"
-             android:textStyle="bold"
-             android:layout_marginLeft="10dp"
-             android:layout_marginTop="10dp"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:text="Tổng Tiền"
+                android:textColor="#B52B2B"
+                android:textSize="20dp"
+                android:textStyle="bold"
 
-             android:textColor="#B52B2B"
+                />
 
-             />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-         <LinearLayout
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:orientation="horizontal"
-             >
+                <CheckBox
 
-             <CheckBox
+                    android:id="@+id/checkb"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="0dp" />
 
-                 android:id="@+id/checkb"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:layout_marginTop="0dp"
-                 />
-             <TextView
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:text="Khách Hàng Vip "
-                 android:textSize="15dp"
-                 android:textStyle="bold"
-                 android:layout_marginLeft="0dp"
-                 android:layout_marginTop="0dp"
-                 />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="0dp"
+                    android:layout_marginTop="0dp"
+                    android:text="Khách Hàng Vip "
+                    android:textSize="15dp"
+                    android:textStyle="bold" />
 
 
-
-         </LinearLayout>
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/tong"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:text="0  "
-                android:textSize="15dp"
-                android:textStyle="bold"
                 android:layout_marginLeft="30dp"
                 android:layout_marginTop="20dp"
-
+                android:text="0  "
                 android:textColor="#B52B2B"
-                />
+                android:textSize="15dp"
+
+                android:textStyle="bold" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=" VND "
-                android:textSize="15dp"
-                android:textStyle="bold"
                 android:layout_marginLeft="100dp"
                 android:layout_marginTop="-20dp"
+                android:text=" VND "
                 android:textColor="#B52B2B"
+                android:textSize="15dp"
+                android:textStyle="bold"
 
                 />
 
             <Button
+                android:id="@+id/thanhtoan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/thanhtoan"
-                android:text="Tính Tiền "
-                android:layout_marginTop="-30dp"
                 android:layout_marginLeft="150dp"
-                />
+                android:layout_marginTop="-30dp"
+                android:text="Tính Tiền " />
 
 
         </LinearLayout>
