--- a/app/src/main/res/layout/fragment_doanh_thu.xml
+++ b/app/src/main/res/layout/fragment_doanh_thu.xml
@@ -3,71 +3,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".Fragment.DoanhThuFragment">
 
-
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-        >
+        android:layout_gravity="center"
+        app:startIconDrawable="@drawable/ic_baseline_date_range_24_date"
+        android:layout_margin="3dp">
 
-        <ImageView
-            android:src="@drawable/lich"
-            android:layout_width="70dp"
-            android:layout_height="100dp"/>
-
-            <!--android:src="@drawable/lich"-->
-
-
-
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/tungay"
-            android:layout_width="250dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="20dp"
-            android:hint="                  Từ Ngày "
-            android:textStyle="bold"
-        android:background="@drawable/edittext_back"
-            />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
+            android:layout_width="match_parent"
+            android:hint="Từ ngày"
+            android:layout_height="match_parent" />
+    </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-        >
+        android:layout_gravity="center"
+        app:startIconDrawable="@drawable/ic_baseline_date_range_24_date"
+        android:layout_margin="3dp">
 
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="100dp"
-            android:src="@drawable/lich"
-            />
-
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/denngay"
-            android:layout_width="250dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="20dp"
-            android:hint="                  Đến  Ngày "
-            android:textStyle="bold"
-            android:background="@drawable/edittext_back"
-            />
-
-    </LinearLayout>
-
+            android:layout_width="match_parent"
+            android:hint="Đến ngày"
+            android:layout_height="match_parent" />
+    </com.google.android.material.textfield.TextInputLayout>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/thongke"
-        android:text="Thống Kê "
-        android:layout_marginLeft="140dp"
+        android:text="Thống Kê"
+        android:layout_gravity="center"
         android:backgroundTint="#FF9800"
 
 
@@ -77,8 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_margin="10dp"
         >
 
         <TextView
@@ -86,7 +58,7 @@
             android:layout_height="wrap_content"
             android:text="Tổng Tiền : "
             android:textStyle="bold"
-            android:textSize="20dp"
+            android:textSize="22dp"
             />
 
 
@@ -97,13 +69,11 @@
             android:text=" 0 VND "
             android:textStyle="bold"
             android:textSize="20dp"
-            android:textColor="#F2cb06"
+            android:textColor="#FF0000"
             />
     </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/rcv"
-        ></androidx.recyclerview.widget.RecyclerView>
-
+        android:id="@+id/rcv"/>
 </LinearLayout>
